--- a/delete.html
+++ b/delete.html
@@ -17,7 +17,7 @@
 
 
 
-  <div class="parent relative h-20 w-20 border m-20 overflow-hidden rounded-xl rounded-bl-0">
+  <div class="parent relative h-20 w-20 border bottom-1  m-20 overflow-hidden rounded-xl rounded-bl-0">
     <div class="child inline-block">one</div>
     <div class="child inline-block absolute top-0 -right-20">two</div>
   </div>
