with dynamic blogs

--- a/delete-web-component/index.html
+++ b/delete-web-component/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <h1>Web component</h1>
+    <p>Web component</p>
     <div class="flex">
         <my-custom-element></my-custom-element>
         <my-custom-element></my-custom-element>
