--- a/delete.html
+++ b/delete.html
@@ -6,47 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://cdn.taislwindcss.com"></script>
+  <style>
+    .flex-item {
+      border: 1px solid;
+      padding: 1rem;
+    }
+
+    .flex-box {
+      display: flex;
+    }
+  </style>
 
 </head>
 
 <body>
 
-  <h1>heading one</h1>
-  <h2>heading two</h2>
-  <h3>heading three</h3>
-  <select name="" id="" aria-placeholder="hello puja" placeholder="puja">
-    <option value="one">ione</option>
-    <option value="one">ione</option>
-    <option value="one">ione</option>
-    <option value="one">ione</option>
-  </select>
-
-
-  <style>
-    select option[disabled],
-    select option:checked {
-      color: red; /* Change this to your desired color */
-    }
-
-    select{
-      color: radsed;
-    }
-
-    select::-ms-expand {
-    color: black; /* Color of the dropdown arrow for IE/Edge */
-  }
-  </style>
-  
-  <select>
-    <option value=""  selected>Select an option</option>
-    <option value="option1">Option 1</option>
-    <option value="option2">Option 2</option>
-    <option value="option3">Option 3</option>
-  </select>
-  
-
-
-
+  <div class="flex-box">
+    <div class="flex-item">item-1</div>
+    <div class="flex-item">item-2</div>
+    <div class="flex-item">item-3</div>
+    <div class="flex-item">item-4</div>
+    <div class="flex-item">item-5</div>
+    <div class="flex-item">item-6</div>
+    <div class="flex-item">item-7</div>
+    <div class="flex-item">item-8</div>
+    <div class="flex-item">item-9</div>
+    <div class="flex-item">item-10</div>
+  </div>
 
 </body>
 
