--- a/mindrisers-popup/index.html
+++ b/mindrisers-popup/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <main class="h-[1080px] flex items-center justify-center bg-[#686163]">
+    <section class="h-[1080px] flex items-center justify-center bg-[#686163]">
       <!-- #ABFFD6   h-657-->
       <div
         class="bg-[#edfff5] rounded-[24px] overflow-hidden relative h-[737px] p-[40px] flex flex-col justify-end"
@@ -86,6 +86,6 @@
           </div>
         </div>
       </div>
-    </main>
+    </section>
   </body>
 </html>
