refactor: .jpg,.png to .webp

--- a/mindrisers-popup/index.html
+++ b/mindrisers-popup/index.html
@@ -14,27 +14,27 @@
       >
         <img
           class="w-[42px] h-[42px] absolute top-8 right-8"
-          src="./assests/basil_cross-solid.png"
+          src="./assests/basil_cross-solid.webp"
         />
         <img
           class="absolute z-10 -top-24 right-0"
-          src="./assests/Ellipse 15.png"
+          src="./assests/Ellipse 15.webp"
         />
         <img
           class="absolute z-10 top-2 right-0"
-          src="./assests/Ellipse 15.png"
+          src="./assests/Ellipse 15.webp"
         />
         <img
           class="absolute z-10 top-32 right-0"
-          src="./assests/Ellipse 15.png"
+          src="./assests/Ellipse 15.webp"
         />
         <img
           class="absolute z-10 bottom-20 right-0"
-          src="./assests/Ellipse 15.png"
+          src="./assests/Ellipse 15.webp"
         />
         <img
           class="absolute z-10 -bottom-14 right-0"
-          src="./assests/Ellipse 15.png"
+          src="./assests/Ellipse 15.webp"
         />
         <div class="flex flex-col relative z-40">
           <div class="flex flex-col self-end">
@@ -42,7 +42,7 @@
               <div class="self-center">
                 <img
                   class="w-[500px] h-[300px] self-center"
-                  src="./assests//vector.png"
+                  src="./assests//vector.webp"
                 />
               </div>
               <div>
@@ -73,13 +73,13 @@
                   class="flex items-center gap-[20px] rounded-[30px] text-white px-[16px] py-[10px] text-[16px] bg-[#018343] font-normal leading-6"
                 >
                   Explore Mindrisers
-                  <img src="./assests/white_arrow.png" />
+                  <img src="./assests/white_arrow.webp" />
                 </button>
                 <button
                   class="flex items-center gap-[20px] bg-white rounded-[30px] px-[16px] py-[10px] text-[16px] border-2 border-[#018343] text-[#018343] font-normal leading-6"
                 >
                   Explore Courses
-                  <img src="./assests/green_arrow.png" />
+                  <img src="./assests/green_arrow.webp" />
                 </button>
               </div>
             </div>
